--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,11 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "*/4 * * * *"
-
   workflow_dispatch:
+  schedule: # execute every 12 hours
+    - cron: "*/3 * * * *"
+
+  #workflow_dispatch:
 
   push:
     branches:
