--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,7 +3,7 @@ name: Generate snake animation
 on:
   workflow_dispatch:
   schedule: # execute every 12 hours
-    - cron: "*/60 * * * *"
+    - cron: "* */12 * * *"
 
   #workflow_dispatch:
 
